# cat-vs-dog

./: .gitignore  README.md  main.py  pyproject.toml
datasets/: dataset.py
models/: __init__.py  model.py  unet.py
test/: test.py
train/: train.py
