[project]
name = "cat-vs-dog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.1.2",
    "kaggle>=1.7.4.5",
    "numpy>=2.3.4",
    "safetensors>=0.6.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
]

[tool.pyright]
exclude = [
  ".venv"
]
venvPath = "."
venv = ".venv"

